objects/SVMXC__Proforma_Invoice_Detail__c.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_Invoice_Type__c</fullName>
        <formula>SVMXC__Proforma_Invoice__r.RecordType.Name</formula>
        <label>Invoice Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Proforma_Invoice_Status__c</fullName>
        <description>Displays the Proforma Invoice Status.</description>
        <formula>TEXT(SVMXC__Proforma_Invoice__r.SVMXC__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proforma Invoice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_DMR_Number__c</fullName>
        <description>SAP DMR Number</description>
        <externalId>true</externalId>
        <inlineHelpText>SAP DMR Number</inlineHelpText>
        <label>SAP DMR Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_Invoice_Number__c</fullName>
        <externalId>true</externalId>
        <label>SAP Invoice Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TotalNetAmount__c</fullName>
        <description>Total Net Amount</description>
        <inlineHelpText>Total Net Amount</inlineHelpText>
        <label>Total Net Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TotalTaxAmount__c</fullName>
        <description>Total Tax Amount</description>
        <inlineHelpText>Total Tax Amount</inlineHelpText>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>